fix: map visibility

--- a/src/app/pages/bes3/activities/bes3-activities.component.scss
+++ b/src/app/pages/bes3/activities/bes3-activities.component.scss
@@ -5,6 +5,10 @@
   width: 100%;
 }
 
+.full-height {
+  height: 100%;
+}
+
 //
 // Overlays
 //
